syntax = "proto3";
import "General.proto";

option csharp_namespace = "Lightning.Core.Generated";

package Lightning;

service GrpcLifetimeService {
	rpc NodeCommandChannel(stream NodeCommandResponseMessage) returns (stream NodeCommandRequestMessage) {}
	rpc GelLayerActivationStream(GeneralRequest) returns (stream LayerActivationMessage) {}
	rpc Connect(ConnectMessage) returns (ConnectResponse) {}
}


message ConnectMessage {

}

message ConnectResponse {

}

message NodeCommandRequestMessage {
	//Note: CommandCodes are defined in the C# Code as Enum
	//		under Lifetime as NodeCommandRequest
	int32 command = 1;
}

message NodeCommandResponseMessage {
	//Note: CommandCodes are defined in the C# Code as Enum
	//		under Lifetime as NodeCommandResponse
	int32 command = 1;
}

message LayerActivationMessage {
	string layerId = 1;
	bool active = 2;
}
